6730740: Fix for 6729881 has apparently broken several 64 bit tests:  "Bad address"

Reviewed-by: alanb, jccollet